--- a/crates/dump-header/Cargo.toml
+++ b/crates/dump-header/Cargo.toml
@@ -10,3 +10,4 @@ clang = { version = "2.0", features = ["runtime", "clang_10_0"] }
 clang-sys = { version = "1.4.0" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+temp-dir = "0.1.12"
