--- a/crates/block_mut/Cargo.toml
+++ b/crates/block_mut/Cargo.toml
@@ -54,7 +54,7 @@ unstable-private = []
 unstable-docsrs = []
 
 [dependencies]
-objc2 = { path = "../objc2", version = "0.5.0", default-features = false }
+objc2 = {version = "0.5.0", default-features = false }
 
 [package.metadata.docs.rs]
 default-target = "x86_64-apple-darwin"
