--- a/crates/block_mut/Cargo.toml
+++ b/crates/block_mut/Cargo.toml
@@ -15,8 +15,7 @@ categories = [
     "external-ffi-bindings",
 ]
 readme = "README.md"
-repository = "https://github.com/madsmtm/objc2"
-documentation = "https://docs.rs/block2/"
+repository = "https://github.com/tamuratak/ffi-utensils/"
 license = "MIT"
 
 [features]
