--- a/crates/block_mut/Cargo.toml
+++ b/crates/block_mut/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "block2"
+name = "block_mut"
 # Remember to update html_root_url in lib.rs
 version = "0.4.0"
 authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
@@ -30,22 +30,6 @@ alloc = ["objc2/alloc"]
 # Link to Apple's libclosure (exists in libSystem).
 apple = ["objc2/apple"]
 
-# Link to libBlocksRuntime from compiler-rt.
-compiler-rt = ["objc2/unstable-compiler-rt"] # TODO: fix this
-
-# Link to GNUStep's libobjc2 (which contains the block implementation).
-gnustep-1-7 = ["objc2/gnustep-1-7"]
-gnustep-1-8 = ["gnustep-1-7", "objc2/gnustep-1-8"]
-gnustep-1-9 = ["gnustep-1-8", "objc2/gnustep-1-9"]
-gnustep-2-0 = ["gnustep-1-9", "objc2/gnustep-2-0"]
-gnustep-2-1 = ["gnustep-2-0", "objc2/gnustep-2-1"]
-
-# Link to Microsoft's libobjc2.
-unstable-winobjc = ["gnustep-1-8"]
-
-# Link to ObjFW.
-unstable-objfw = []
-
 # Expose private ffi functions and statics.
 unstable-private = []
 
@@ -67,9 +51,4 @@ targets = [
     "aarch64-apple-ios",
     "x86_64-apple-ios",
     # "i386-apple-ios",
-    # GNUStep
-    "x86_64-unknown-linux-gnu",
-    "i686-unknown-linux-gnu",
-    # Windows
-    "x86_64-pc-windows-msvc",
 ]
