--- a/crates/dump-header/Cargo.toml
+++ b/crates/dump-header/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clang = { version = "2.0", features = ["runtime", "clang_10_0"] }
 clang-sys = { version = "1.4.0" }
+clap = { version = "4.5.3", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 temp-dir = "0.1.12"
