--- a/crates/dump-header/Cargo.toml
+++ b/crates/dump-header/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "4.5.3", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 temp-dir = "0.1.12"
+toml = "0.8.12"
