--- a/crates/dump-header/Cargo.toml
+++ b/crates/dump-header/Cargo.toml
@@ -13,3 +13,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 temp-dir = "0.1.12"
 toml = "0.8.12"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
